# bweas

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build_linuxlog.txt  bweas-config.json  flake.nix  result  vcpkg.json
.github/ISSUE_TEMPLATE/: new-feature.md
.github/workflows/: cmake-linux.yml  cmake-windows.yml  cmake.yml
docs/en/: kernel.md  language.md  main_page.md
src/: CMakeLists.txt  bweas.cpp  main.cpp  mdef.cpp  mdef.hpp
src/bs/: build_sys.hpp  bw_defs.hpp  bwbuild_sys.cpp  bwbuild_sys.hpp  bwcache_api.hpp  bwcache_fast.cpp  bwcache_json.cpp  bwcache_lua.cpp  bwconf_var.hpp  bwgenerator.hpp  bwgenerator_api.hpp  bwgenerator_integral.cpp  bwgenerator_integral.hpp  bwgenerator_lua.cpp  bwgntools.cpp  bwgntools.hpp  bwlang.hpp  bwlua.hpp  bwluatools.hpp  bwluatoolslang.hpp  bwmodule.cpp  bwmodule.hpp  bwpackage.cpp  bwpackage.hpp  conf_var.hpp  conf_var_def.cpp
src/bs/console_arg/: hand_arg.hpp  hax.cpp
src/bs/lang/: expression.hpp  interpreter.cpp  interpreter.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  parser_utility.cpp  scope.hpp  semantic_an.cpp  semantic_an.hpp  static_linking_func.cpp  static_linking_func.hpp  static_struct.hpp  token.hpp  var.hpp
src/bs/smodule/: module.cpp  module.hpp
src/bs/smodule/srl/: srl_importm.cpp  srl_importm.hpp
src/bs/tools/: bwexception.hpp  bwfile.hpp  bwlua.hpp  bwlz4.hpp  call_cmd.hpp  exception.hpp
src/kernel/: CRT_DEBUG.hpp
src/kernel/high_level/: assistant.cpp  assistant.hpp  bwmacros_platform.h  bwtype.h  hook_winapi.cpp  hook_winapi.hpp
src/kernel/high_level/hook_linux_lib/: CMakeLists.txt  decl_func_fbwhook.c
src/kernel/low_level/: assist_f.c  assist_f.h  err.c  err.h  kernel_def.h  ll.h  macros.h  sys_f.c  sys_f.h  sys_file.c  sys_file.h  type.h
test/: CMakeLists.txt  mtest.cpp
test/bs/lang/: lang_tests.hpp  lexer.hpp  parser.hpp
test/bs/tools/: bwlua.hpp  bwlz4.hpp
